# Universal_AABB_Detector

./: CMakeLists.txt  README.md
DEMO/: Face_detection_DEMO_1.avi  Face_detection_DEMO_12.avi  Face_detection_DEMO_22.avi  Face_detection_DEMO_24.avi  Face_detection_DEMO_3.avi  Face_detection_DEMO_34.avi  Face_detection_DEMO_40.avi  Face_detection_DEMO_43.avi  Face_detection_DEMO_44.avi  Face_detection_DEMO_59.avi  Face_detection_DEMO_70.avi  Face_detection_DEMO_76.avi  Face_detection_DEMO_8.avi  Face_detection_DEMO_9.avi  Face_detection_DEMO_94.avi
Data/Annotations/: bounding_boxes.txt
Data/Images/: Thumbs.db
Modules/: Eigen_VERSION.cmake  FindEigen.cmake  Protobuf_VERSION.cmake
Networks/: visage_12_bb.data-00000-of-00001  visage_12_bb.index  visage_12_bb.pb  visage_12_rect.data-00000-of-00001  visage_12_rect.index  visage_12_rect.pb  visage_12_size.data-00000-of-00001  visage_12_size.index  visage_12_size.pb
Sources/: Rect_fuser.cpp  Rect_fuser.h  main.cpp
